# ckanext-switzerland

./: .gitignore  MANIFEST.in  README.md  conftest.py  dev-requirements.txt  publiccode.yml  pyproject.toml  requirements.txt  runtests.sh  setup.cfg  setup.py  test.ini  update_translations.sh
.github/workflows/: test.yml
ckanext/switzerland/: blueprints.py  commands.py  controllers.py  dcat-ap-switzerland_scheming.json  dcat-ap-switzerland_scheming_original.json  helpers.py  logic.py  multilingual_group_scheming.json  multilingual_organization_scheming.json  plugin.py  presets.json  validators.py
ckanext/switzerland/assets/: c_search.js  sort_resources.js  webassets.yml
ckanext/switzerland/dcat/: harvesters.py  profiles.py
ckanext/switzerland/fanstatic/: 2_search.js  bootstrap.js  bs3-confirm-action.js  bs3-image-upload.js  bs3-resource-reorder.js  c_search.js  layout.html  main.css  relations.js  resource.config  search.js
ckanext/switzerland/ftp/: BaseFTPHarvester.py  FTPHelper.py  ftpharvester.py  harvesters.py
ckanext/switzerland/harvester/: aws_keys.py  base_ftp_harvester.py  base_sbb_harvester.py  ftp_helper.py  ftp_storage_adapter.py  infoplus.py  ist_file.py  keys.py  s3_storage_adapter.py  sbb_ftp_harvester.py  sbb_harvester.py  storage_adapter_base.py  storage_adapter_factory.py  storage_adapter_interface.py  timetable_harvester.py
ckanext/switzerland/public/: package.json
ckanext/switzerland/templates/: base.html  footer.html  header.html  navigation.html  page.html
ckanext/switzerland/templates2/: base.html  footer.html  header.html  navigation.html  page.html
ckanext/switzerland/tests/: base_ftp_harvester_tests.py  conftest.py  data.py  mock_ftp.py  mock_ftp_server.py  test_BaseFTPHarvester.py  test_FTPHelper.py  test_baseftpharvester.py  test_ftp_helper.py  test_ftp_storage_adapter.py  test_helpers.py  test_infoplus.py  test_ist_file.py  test_plugin.py  test_profiles.py  test_s3_storage_adapter.py  (+5 more)
i18n/: ckanext-switzerland.pot
solr/: schema.xml  stopwords_en.txt
(+213 files in other folders)
